--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ url: http://polandeme.github.io
 rss_url: /pages/atom.xml
 
 # avatar头像及Favicon
-avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
-favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
+# avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
+# favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
 
 # google analytics 设置
 ga:
@@ -29,5 +29,5 @@ ga:
   url: polandeme.github.io
 
 # disqus 设置
-disqus:
-  shortname: suyan-zh
+# disqus:
+  # shortname: suyan-zh
