--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,38 @@
-permalink: /:year/:month/:day/:title.html
+# Site settings
+title: Your awesome title
+email: your-email@domain.com
+description: > # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "http://yourdomain.com" # the base hostname & protocol for your site
+
+
+# Sidebar filter
+# Choose 'tag' or 'category' as filter in sidebar.
+filter: 'tag'
+
+
+# Social account
+# twitter:  username
+# weibo:    ID
+# github:   username
+# codepen:  username
+# dribbble: username
+
+
+# Comment
+# disqus_shortname: discussion_shortname
+
+
+# Google Analytics
+# google_analytics: tracking_ID
+
+
+# Build settings
 markdown: kramdown
-pygments: true
-
-kramdown:
-  input: GFM
-
-# 作者信息
-author: 
-  name: polandeme
-  email: polandeme@gmail.com
-  link: http://polande.com
-  weibo: http://weibo.com/chinahgr
-  github: https://github.com/polandeme
-
-# 站点信息
-title: 前端资源每日推荐
-description: 前端资源每日推荐
-url: http://polandeme.github.io
-rss_url: /pages/atom.xml
-
-# avatar头像及Favicon
-# avatar: http://7u2ho6.com1.z0.glb.clouddn.com/site-avatar.png
-# favicon: http://7u2ho6.com1.z0.glb.clouddn.com/site-favicon.ico
-
-# google analytics 设置
-ga:
-  id: UA-70825980-1
-  url: polandeme.github.io
-
-# disqus 设置
-# disqus:
-  # shortname: suyan-zh
+sass:
+  style: compressed
+gems:
+  - jekyll-sitemap
