--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ author:
   github: http://github.com/polandeme
 
 # 站点信息
-title: 闫肃的博客 
-description: 闫肃的博客
-url: http://yansu.org
+title: 前端 
+description: 整理推荐前端.程序文章
+url: http://polande.com
 rss_url: /pages/atom.xml
 
 # avatar头像及Favicon
